fix the extra gap in navigation bar

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ ul {
 
 li {
   float: left;
-  width: 33%;
+  width: 33.33%;
 }
 
 li a {
